# libsbml-build-scripts

./: CONTRIBUTING.md  README.md  SUPPORT.md  codemeta.json
autobuild-option-tests/: .gitignore  autobuild.py  autotestdata.py  cmakerelib.py  config-exp.json  config.json  config518-exp.json  config518.json  fedora-30-ninja-base-CMakeCache.txt  generate_matrix_report.py  parse_test_results.py  readme.md  readme2.md  run_auto_test.py  run_matrix_tests.py  templatetools.py  testlib.py  ubuntu-1604-ninja-base-CMakeCache.txt  ubuntu-1904-ninja-base-CMakeCache.txt
autobuild-option-tests/reports/2019-03-07-23-50/: result_log.md
autobuild-option-tests/reports/2019-03-12-23-11/: result_log.md
autobuild-option-tests/reports/2019-03-13-12-40/: report_build.csv  result_log.md
autobuild-option-tests/reports/2019-03-20-14-48/: report_build.csv  report_check.csv  report_configure.csv  result_log-(2019-03-20-14-48).md  result_log-(2019-03-20-14-48).xlsx
autobuild-option-tests/reports/2019-03-20-22-33/: report_build.csv  report_check.csv  report_configure.csv  result_log-exp-(2019-03-20-22-33).md  result_log-exp-(2019-03-20-22-33).xlsx
autobuild-option-tests/reports/2019-03-26-12-52/: result_log-2019-03-26-12-52.xlsx
autobuild-option-tests/reports/2019-04-21-23-00/: result_log-2019-04-21-23-00.xlsx
autobuild-option-tests/ubuntu-1604-ninja-base-check/: CMakeCache.txt
autobuild-option-tests/ubuntu-1804-ninja-base/: CMakeCache.txt
autobuild-vm-configs/: readme.md  setup-libsbml-dev-bionic64.md  setup-libsbml-dev-disco64.md  setup-libsbml-dev-fedora30-64.md  setup-libsbml-dev-xenial64.md
common/: README.md  mac_installer.md
common/mac_installer/: README.md
compartment/: Development.md  README.md  conda.md
compartment/Development/: build-all.sh  build-libsbml-conda.sh  run_ctest.sh
compartment/create_python_anaconda/: README.md  build-libsbml-conda.sh
constraint/: README.md  working_notes.md
constraint/online-validator/: README.md  update-libsbml.sh  update-validator.sh
delay/: README.md  build-linux-vm.md  build-python-all.md  build-python.md  buildtool.md  development.md  libsbml-experimental-src-32.md  python-create-standalone.md  updateSVN.bat
delay/build-python/: build_conda.bat  build_libsbml.bat
delay/build-python-experimental-src-32/: build_python.bat
delay/buildtool/: CMakeCache_32p.in  CMakeCache_64p.in  buildAll.bat.in  buildAllp.bat.in  buildPython.in  buildPythonP.in  build_log.txt  build_log_64.txt  copy_to_surfdrive.bat  createInst.in  createInstallFilesP.in  createMatlabInstallersP.in  createXMLRel_x64.in  libsbml.setting  libsbml.setting.rule  make_pkg.bat  out.txt  overview.txt  run_build.bat  run_package_build.bat  run_tests.bat  run_tests_official.bat  runpython.bat  setup32.py.in  test_log32.txt  test_log32p.txt  test_log64.txt  test_log64p.txt
delay/buildtool-in-files/: CMakeCache_32.delay  CMakeCache_32.in  CMakeCache_64.delay  CMakeCache_64p.delay  CMakeCache_64p.in  CMakeCache_64p.in.delay
delay/create-package-archives/: README.md  create.bat
delay/development/: nightly.bat.old
delay/linux-vm-builds/: Building_MATLAB.md  README.md  build_matlab.sh  copyToSharedFolder.bat  createBuild5.sh  createPackageBuild.sh
delay/old_build_system/: build-python-all.md  cmake_merge.WinMerge
delay/python-create-standalone/: createStandalone-exp.bat  createStandalone.bat
delay/vm-share/: README.md  build_matlab.sh  createBuild5.sh  createPackageBuild.sh  sortVMDir.bat
docs/: README.md  libsbml-matrix-tests.md
generic-win/: README.md
oldmac/: README.md  create_macos_builds.md  run_build.sh
oldmac/create_macos_builds/: README.md  run_build.sh  run_build_experimental.sh
oldmac/stable/: CMakeCache.txt
rate/: README.md
ratetule/: MatrixTools.md  README.md  automatic-builds.md  buildtool.md  compile-r-experimental.md  compile-r.md  create-conda-stable.md  libsbml-with-packages.md  libsbml.md  py36_vs10.md
ratetule/MatrixTools/: README.md  update.bat
ratetule/automatic-builds/: README.md
ratetule/buildtool/: CMakeCache_32.in  CMakeCache_32.in.py27  CMakeCache_32.in.py32  CMakeCache_32.in.py36  CMakeCache_32p.in  CMakeCache_64.in  CMakeCache_64p.in  CMakeListsPy.txt.in  CMakeListsPythonPackage.in  buildAll.bat.in  buildPython.in  buildPythonP.in  build_log.txt  callmkoct.bat  callmkoct.in  createInst.in  createMatlabInstallers.in  createXMLRel_x64.in  createXMLRel_x86.in  deleteBindings.bat  libsbml.setting  overview.txt  setup64.py.in  test_log32.txt  test_log32p.txt  test_log64.txt  test_log64p.txt  updateR.bat  updatelist.bat
ratetule/compile-r/: createV2.bat  createV3.bat  local-downcast-astplugins.cpp  local-downcast-extension.cpp  local-downcast-namespaces.cpp  local-downcast-plugins.cpp  local-downcast.cpp
ratetule/compile-r-experimental/: CMakeLists.txt  createV2.bat  createV3.bat  local-downcast-extension.cpp  local-downcast-namespaces.cpp
ratetule/compile-r-experimental/build32/: CMakeCache.txt
ratetule/compile-r-experimental/build64/: CMakeCache.txt
ratetule/create-conda-stable/: create-conda-stable.bat
ratetule/py36_vs10/: README.md
rule/: README.md  create_dmg.md  create_mac_python_binaries.md  create_macos_builds.md  create_python_anaconda.md  create_python_binaries.md  create_python_whl.md  create_src_archive.md
rule/Development/: build-libsbml-conda.sh
rule/create_dmg/: README.md
rule/create_macos_builds/: README.md  run_build.sh  run_build_experimental.sh
rule/create_python_binaries/: README.md
rule/create_python_whl/: README.md
rule/create_source_archive/: README.md  buildGnuSource.sh  buildLibSBMLPackages.sh
species/: Development.md  README.md  create_python_wheels.md  many_linux.md
species/Development/: build-all.sh  build-libsbml-conda.sh  conda.md  run_ctest.sh
species/create_python_anaconda/: README.md
species/many_linux/: README.md  build_libcombine.sh  build_libnuml.sh  build_libsbml.sh  build_libsbml_experimental.sh  build_libsedml.sh  run_libcombine.sh  run_libnuml.sh  run_libsbml.sh  run_libsbml_experimental.sh  run_libsedml.sh
species/work/test/: test_py_modapi.py
(+299 files in other folders)
